duplicate content changed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!-- <section class="bg_color">
+    <section class="bg_color">
         <nav class="container">
             <div class="d_flex align_item js_space_between">
                 <h1 class="ff-worksans fw-600 fs-40 font-color">Digi<span class="color-black">ency</span></h1>
@@ -25,22 +25,22 @@
             </div>
         </nav>
         <div class="container">
-            <div class="row">
-                <div class="col-7">
-                    <h1 class="ff-poppins fw-700 fs-48 font_width">Choose What Matters To Your Business & Your
+            <div class="row padding_top_bottom5 padding_top_lg_bottom5">
+                <div class="col-12 col-lg-6">
+                    <h1 class="ff-poppins fw-700 fs-35 fs-lg-48  h1_color">Choose What Matters To Your Business & Your
                         Customers.</h1>
-                    <p class="ff-poppins fw-400  fs-16">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                    <p class="ff-poppins fw-400  fs-16 p_color padding_top_bottom4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
                         in digni ssim euismod purus donec mus vulputate habitant iaculis. Com
                         odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
-                    <button class="ff-poppins fw-500 fs-20">Get Start Now</button>
+                    <button class="ff-poppins fw-500 fs-20 padding-bottom">Get Start Now</button>
                 </div>
-                <div class="col-5">
+                <div class="col-12 col-lg-6">
                     <img src="./assets/images/heroimg.png" width="100%" alt="">
                 </div>
             </div>
         </div>
 
-    </section> -->
+    </section>
     <section>
         <div class="container padding_top_bottom3">
             <div class="d-flex  text-center">
@@ -65,10 +65,10 @@
                 <div class="col-12 col-sm-6 col-lg-4 margin-top2">
                     <div class=" box">
                         <div class="d_flex js_space_between ">
-                            <img width="100vh" src="./assets/images/cardimg.png" alt="">
-                            <h1 class="ff-poppins fw-600 fs-73 text_color">01</h1>
+                            <img width="100vh" src="./assets/images/gaming.png" alt="">
+                            <h1 class="ff-poppins fw-600 fs-73 text_color">02</h1>
                         </div>
-                        <h1 class="ff-poppins fw-600 fs-25 padding_top_bottom">UX Design</h1>
+                        <h1 class="ff-poppins fw-600 fs-25 padding_top_bottom">Game Design</h1>
                         <p class="ff-poppins fw-300 fs-13 p_color">Mobile App, Website</p>
                         <p class="ff-poppins fs-16 padding_top p_color">Lorem ipsum dolor sit amet, consec tet ur adipiscing elit. Accumsan sed
                             faucibu s faucibus augue. Cras ut.</p>
@@ -77,10 +77,10 @@
                 <div class="col-12 col-sm-6 col-lg-4 margin-top2">
                     <div class=" box">
                         <div class="d_flex js_space_between ">
-                            <img width="100vh" src="./assets/images/cardimg.png" alt="">
-                            <h1 class="ff-poppins fw-600 fs-73 text_color">01</h1>
+                            <img width="100vh" src="./assets/images/design.png" alt="">
+                            <h1 class="ff-poppins fw-600 fs-73 text_color">03</h1>
                         </div>
-                        <h1 class="ff-poppins fw-600 fs-25 padding_top_bottom">UX Design</h1>
+                        <h1 class="ff-poppins fw-600 fs-25 padding_top_bottom">Graphic Design</h1>
                         <p class="ff-poppins fw-300 fs-13 p_color">Mobile App, Website</p>
                         <p class="ff-poppins fs-16 padding_top p_color">Lorem ipsum dolor sit amet, consec tet ur adipiscing elit. Accumsan sed
                             faucibu s faucibus augue. Cras ut.</p>
@@ -89,10 +89,10 @@
                 <div class="col-12 col-sm-6 col-lg-4 margin-top2">
                     <div class=" box">
                         <div class="d_flex js_space_between ">
-                            <img width="100vh" src="./assets/images/cardimg.png" alt="">
-                            <h1 class="ff-poppins fw-600 fs-73 text_color">01</h1>
+                            <img width="100vh" src="./assets/images/web-design.png" alt="">
+                            <h1 class="ff-poppins fw-600 fs-73 text_color">04</h1>
                         </div>
-                        <h1 class="ff-poppins fw-600 fs-25 padding_top_bottom">UX Design</h1>
+                        <h1 class="ff-poppins fw-600 fs-25 padding_top_bottom">Web Design</h1>
                         <p class="ff-poppins fw-300 fs-13 p_color">Mobile App, Website</p>
                         <p class="ff-poppins fs-16 padding_top p_color">Lorem ipsum dolor sit amet, consec tet ur adipiscing elit. Accumsan sed
                             faucibu s faucibus augue. Cras ut.</p>
@@ -101,10 +101,10 @@
                 <div class="col-12 col-sm-6 col-lg-4 margin-top2">
                     <div class=" box">
                         <div class="d_flex js_space_between ">
-                            <img width="100vh" src="./assets/images/cardimg.png" alt="">
-                            <h1 class="ff-poppins fw-600 fs-73 text_color">01</h1>
+                            <img width="100vh" src="./assets/images/mobile-development.png" alt="">
+                            <h1 class="ff-poppins fw-600 fs-73 text_color">05</h1>
                         </div>
-                        <h1 class="ff-poppins fw-600 fs-25 padding_top_bottom">UX Design</h1>
+                        <h1 class="ff-poppins fw-600 fs-25 padding_top_bottom">App Development</h1>
                         <p class="ff-poppins fw-300 fs-13 p_color">Mobile App, Website</p>
                         <p class="ff-poppins fs-16 padding_top p_color">Lorem ipsum dolor sit amet, consec tet ur adipiscing elit. Accumsan sed
                             faucibu s faucibus augue. Cras ut.</p>
@@ -113,10 +113,10 @@
                 <div class="col-12 col-sm-6 col-lg-4 margin-top2">
                     <div class=" box">
                         <div class="d_flex js_space_between ">
-                            <img width="100vh" src="./assets/images/cardimg.png" alt="">
-                            <h1 class="ff-poppins fw-600 fs-73 text_color">01</h1>
+                            <img width="100vh" src="./assets/images/digital-marketing.png" alt="">
+                            <h1 class="ff-poppins fw-600 fs-73 text_color">06</h1>
                         </div>
-                        <h1 class="ff-poppins fw-600 fs-25 padding_top_bottom">UX Design</h1>
+                        <h1 class="ff-poppins fw-600 fs-25 padding_top_bottom">Digital Marketing</h1>
                         <p class="ff-poppins fw-300 fs-13 p_color">Mobile App, Website</p>
                         <p class="ff-poppins fs-16 padding_top p_color">Lorem ipsum dolor sit amet, consec tet ur adipiscing elit. Accumsan sed
                             faucibu s faucibus augue. Cras ut.</p>
